--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Create.cshtml
@@ -5,12 +5,14 @@
 @{
     ViewData["Title"] = "Create Certificate";
     var returnUrl = ViewBag.ReturnUrl;
+
+
 }
 
 <h1>@Localizer["Create Certificate"]</h1>
 <hr />
 <form asp-controller="@typeof(CertificatesController).GetNameOfController()" asp-action="@nameof(CertificatesController.Create)"
-      asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
+      asp-route-returnUrl="@returnUrl" method="post" class="mt-3" onsubmit="PrepareFormOnsubmit()">
     <input hidden asp-for="ExaminationEncryptedID" />
     <div class="form-group row">
         <label asp-for="ExamDate" class="col-sm-2 col-form-label"></label>
@@ -37,7 +39,7 @@
         <label asp-for="PEPassportID" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="input-group">
-                <select asp-for="PEPassportID" class="form-control" asp-items="Model.PEPassportAVNumberItems" onchange="GetRegistrationTypesFromPEPassport($('#PEPassportID').val(), $('#ProcessID').val(), $('#ExamDate').val())">
+                <select asp-for="PEPassportID" class="form-control" asp-items="Model.PEPassportAVNumberItems" onchange="OnChangePEPassportID()">
                     @if (Model.PEPassportAVNumberItems.Any())
                     {
                         <option value="" selected disabled hidden>@Localizer["Choose PE Passport"]</option>
@@ -48,7 +50,7 @@
                     }
                 </select>
                 <div class="input-group-append">
-                    <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+                    <input class="btn btn-primary" id="PEPassportIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#PEPassportID'))" />
                 </div>
             </div>
             <span asp-validation-for="PEPassportID" class="text-danger"></span>
@@ -58,7 +60,7 @@
         <label asp-for="CompanyID" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="input-group">
-                <select asp-for="CompanyID" class="form-control" asp-items="Model.CompanyNameItems">
+                <select asp-for="CompanyID" class="form-control" asp-items="Model.CompanyNameItems" >
                     @if(Model.CompanyNameItems.Any())
                     {
                         <option value="" selected disabled hidden>@Localizer["Choose Company"]</option>
@@ -69,7 +71,7 @@
                     }
                 </select>
                 <div class="input-group-append">
-                    <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+                    <input class="btn btn-primary" id="CompanyIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#CompanyID'))" />
                 </div>
             </div>
             <span asp-validation-for="CompanyID" class="text-danger"></span>
@@ -79,7 +81,7 @@
         <label asp-for="ProcessID" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="input-group">
-                <select asp-for="ProcessID" class="form-control" asp-items="Model.ProcessNameItems" onchange="GetRegistrationTypesFromPEPassport($('#PEPassportID').val(), $('#ProcessID').val(), $('#ExamDate').val())">
+                <select asp-for="ProcessID" class="form-control" asp-items="Model.ProcessNameItems" onchange="OnChangeProcessID()" disabled>
                     @if (Model.ProcessNameItems.Any())
                     {
                         <option value="" selected disabled hidden>@Localizer["Choose Process"]</option>
@@ -90,7 +92,7 @@
                     }
                 </select>
                 <div class="input-group-append">
-                    <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+                    <input class="btn btn-primary" id="ProcessIDClearButton" type="button" value="@Localizer["Clear"]" disabled onclick="OnClickClear($('#ProcessID'))" />
                 </div>
             </div>
             <span asp-validation-for="ProcessID" class="text-danger"></span>
@@ -100,7 +102,7 @@
         <label asp-for="RegistrationTypeID" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="input-group">
-                <select asp-for="RegistrationTypeID" class="form-control" asp-items="Model.RegistrationTypeNameItems" onchange="GetMaxCertificateExpirationDate($('#PEPassportID').val(), $('#ProcessID').val(), $('#RegistrationTypeID').val(), $('#ExamDate').val())">
+                <select asp-for="RegistrationTypeID" class="form-control" asp-items="Model.RegistrationTypeNameItems" onchange="OnChangeRegistrationTypeID()" disabled>
                     @if (Model.RegistrationTypeNameItems.Any())
                     {
                         <option value="" selected disabled hidden>@Localizer["Choose Registration Type"]</option>
@@ -111,7 +113,7 @@
                     }
                 </select>
                 <div class="input-group-append">
-                    <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+                    <input class="btn btn-primary reset" id="RegistrationTypeIDClearButton" type="button" value="@Localizer["Clear"]" disabled onclick="OnClickClear($('#RegistrationTypeID'))" />
                 </div>
             </div>
             <span asp-validation-for="RegistrationTypeID" class="text-danger"></span>
@@ -120,7 +122,12 @@
     <div class="form-group row">
         <label asp-for="ExpiryDate" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
-            <input asp-for="ExpiryDate" class="form-control">
+            <div class="input-group">
+                <input asp-for="ExpiryDate" class="form-control" placeholder="Expiry Date" onchange="OnChangeExpiryDate()" min="@Model.ExamDate?.ToString("yyyy-MM-dd")" max="@Model.ExpiryDate?.ToString("yyyy-MM-dd")" readonly>
+                <div class="input-group-append">
+                    <input class="btn btn-primary" id="ExpiryDateClearButton" type="button" value="@Localizer["Clear"]" disabled onclick="OnClickClear($('#ExpiryDate'))" />
+                </div>
+            </div>
             <span asp-validation-for="ExpiryDate" class="text-danger"></span>
         </div>
     </div>
@@ -133,8 +140,12 @@
 </form>
 
 @section Scripts {
-    <script src="~/js/SetProcessTypeSelectSingle.js"></script>
-    <script src="~/js/Certificates/GetRegistartionTypeIDsByPEPassportID.js"></script>
-    <script src="~/js/Certificates/GetMaxCertificateExpirationDate.js"></script>
-    <script src="~/js/ResetSelect.js"></script>
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script src="~/js/Certificates/PrepareFormOnsubmit.js"></script>
+    <script src="~/js/OnClickClear.js"></script>
+    <script type="module" src="~/js/Certificates/OnChangePEPassportID.js"></script>
+    <script type="module" src="~/js/Certificates/OnChangeProcessID.js"></script>
+    <script type="module" src="~/js/Certificates/OnChangeRegistrationTypeID.js"></script>
+    <script type="module" src="~/js/Certificates/OnChangeExpiryDate.js"></script>
 }
