--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Update.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Update.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using Domain.Models
 @inject IViewLocalizer Localizer
 @model PEPassportUpdateViewModel
 
@@ -102,33 +103,11 @@
                             <input asp-for="Certifications[i].HasNext" hidden />
                             @if (Model.Certifications[i].HasNext)
                             {
-                                @Html.DropDownListFor(modelItem => Model.Certifications[i].HasPassed,
-                                    selectList: new SelectList(new[]
-                                        {
-                                            new SelectListItem { Value = null, Text = "Not set"},
-                                            new SelectListItem { Value = "False", Text = "False"},
-                                            new SelectListItem { Value = "True", Text = "True"},
-                                        },
-                                        "Value",
-                                        "Text"
-                                    ),
-                                    htmlAttributes: new { @class = "form-control", @disabled = "disabled"}
-                                )
+                                @Html.DisplayFor(modelItem => Model.Certifications[i].HasPassed)
                             }
                             else
                             {
-                                @Html.DropDownListFor(modelItem => Model.Certifications[i].HasPassed, 
-                                    selectList: new SelectList(new[]
-                                        {
-                                            new SelectListItem { Value = null, Text = "Not set"},
-                                            new SelectListItem { Value = "False", Text = "False"},
-                                            new SelectListItem { Value = "True", Text = "True"},
-                                        },
-                                        "Value",
-                                        "Text"
-                                    ),
-                                    htmlAttributes: new { @class = "form-control"}
-                                )
+                                @Html.EditorFor(modelItem => Model.Certifications[i].HasPassed)
                             }
                         </td>
                     </tr>
