--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Edit.cshtml
@@ -139,7 +139,7 @@
                 <div class="input-group">
                     @if (userCanEditCertificates && EnableProcessID && Model.RegistrationTypeID == 0)
                     {
-                        <select asp-for="ProcessID" class="form-control" asp-items="Model.ProcessNameItems" onchange="OnChangeProcessID('Edit')">
+                        <select asp-for="ProcessID" class="form-control" asp-items="Model.ProcessNameItems" onchange="OnChangeProcessID()">
                             @if (Model.ProcessNameItems.Any())
                             {
                                 <option value="" selected disabled hidden>@Localizer["Choose Process"]</option>
@@ -155,7 +155,7 @@
                     }
                     else
                     {
-                        <select asp-for="ProcessID" class="form-control" asp-items="Model.ProcessNameItems" onchange="OnChangeProcessID('Edit')" disabled="disabled">
+                        <select asp-for="ProcessID" class="form-control" asp-items="Model.ProcessNameItems" onchange="OnChangeProcessID()" disabled="disabled">
                             @if (Model.ProcessNameItems.Any())
                             {
                                 <option value="" selected disabled hidden>@Localizer["Choose Process"]</option>
@@ -218,14 +218,14 @@
             <div class="col-sm-10">
                 <div class="input-group">
                     @if(userCanUpdateCertificates && EnableExpiryDate && Model.HasPassed == null){
-                        <input asp-for="ExpiryDate" class="form-control" placeholder="Expiry Date" onchange="OnChangeExpiryDate()" min="@Model.ExamDate?.ToString("yyyy-MM-dd")" max="@Model.MaxExpiryDate?.ToString("yyyy-MM-dd")">
+                        <input asp-for="ExpiryDate" class="form-control" placeholder="Expiry Date" onchange="OnChangeExpiryDate(@($"{(userCanEditCertificates?"true":"false")}"))" min="@Model.ExamDate?.ToString("yyyy-MM-dd")" max="@Model.MaxExpiryDate?.ToString("yyyy-MM-dd")">
                         <div class="input-group-append">
                             <input class="btn btn-primary" id="ExpiryDateClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#ExpiryDate'))" />
                         </div>
                     }
                     else
                     {
-                        <input asp-for="ExpiryDate" class="form-control" placeholder="Expiry Date" onchange="OnChangeExpiryDate()" min="@Model.ExamDate?.ToString("yyyy-MM-dd")" max="@Model.MaxExpiryDate?.ToString("yyyy-MM-dd")" readonly>
+                        <input asp-for="ExpiryDate" class="form-control" placeholder="Expiry Date" onchange="OnChangeExpiryDate(@($"{(userCanEditCertificates?"true":"false")}"))" min="@Model.ExamDate?.ToString("yyyy-MM-dd")" max="@Model.MaxExpiryDate?.ToString("yyyy-MM-dd")" readonly>
                         <div class="input-group-append">
                             <input class="btn btn-primary" id="ExpiryDateClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#ExpiryDate'))" disabled />
                         </div>
@@ -251,7 +251,7 @@
                         ),
                         new { 
                             @class = "form-control",
-                            @onchange = "OnChangeHasPassedID()"
+                            @onchange = $"OnChangeHasPassedID({(userCanEditCertificates?"true":"false")})"
                         })
                         <div class="input-group-append">
                             <input class="btn btn-primary" id="HasPassedClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#HasPassed'))" />
@@ -270,7 +270,7 @@
                         ),
                         new {
                             @class = "form-control",
-                            @onchange = "OnChangeHasPassedID()",
+                            @onchange = $"OnChangeHasPassedID({(userCanEditCertificates?"true":"false")})",
                             @disabled =  "disabled" 
                         })
                         <div class="input-group-append">
