--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Details.cshtml
@@ -108,12 +108,12 @@
                     @Html.DisplayFor(modelItem => certification.HasPassed)
                 </td>
                 <td>
-                    @if (userCanReadCertificates)
+                    @if (userCanReadCertificates || userCanUpdateCertificates)
                     {
                         <a asp-controller="@typeof(CertificatesController).GetNameOfController()" asp-action="@nameof(CertificatesController.Details)"
                         asp-route-id="@certification.EncryptedID" asp-route-returnUrl="@currentUrl">@Localizer["Details"]</a>
                     }
-                    @if (userCanEditCertificates)
+                    @if (userCanEditCertificates || userCanUpdateCertificates)
                     {
                         <text>|</text> <a asp-controller="@typeof(CertificatesController).GetNameOfController()" asp-action="@nameof(CertificatesController.Edit)"
                                   asp-route-id="@certification.EncryptedID" asp-route-returnUrl="@currentUrl">@Localizer["Edit"]</a>
