--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Shared/_SelectLanguagePartial.cshtml
@@ -8,11 +8,12 @@
 @inject IOptions<RequestLocalizationOptions> LocOptions
 
 @{
+
     var requestCulture = Context.Features.Get<IRequestCultureFeature>();
     var cultureItems = LocOptions.Value.SupportedUICultures
         .Select(c => new SelectListItem { Value = c.Name, Text = c.Name.ToUpper() })
         .ToList();
-    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value}";
+    var returnUrl = string.IsNullOrEmpty(Context.Request.Path) ? "~/" : $"~{Context.Request.Path.Value + Context.Request.QueryString}";
 }
 
 <div title="@Localizer["Request culture provider:"] @requestCulture?.Provider?.GetType().Name">
