--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Index.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Index.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Application.Security
 @inject IViewLocalizer Localizer
-@inject UserManager<IdentityUser> userManager
+@inject UserManager<AppUser> userManager
 @inject ITrainingCentersSQLRepository trainingCentersSQLRepository
 @inject IDataProtectionProvider dataProtectionProvider
 @inject IDataProtectionPurposeStrings dataProtectionPurposeStrings
