--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
@@ -185,12 +185,54 @@
                             </div>
                         }
                         <div class="input-group-append">
-                            <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" />
+                            <input class="btn btn-primary reset" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AddressID'))" />
                         </div>
                     </div>
                     <span asp-validation-for="AddressID" class="text-danger"></span>
                 </div>
             </div>
+            @if (User.IsInRole(RolesStore.Admin))
+            {
+                <h4>@Localizer["User"]</h4>
+                <div class="form-group row">
+                    <label asp-for="AppUserID" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <div class="input-group align-self-center">
+                            <select asp-for="AppUserID" class="form-control" asp-items="@Model.AppUsersSelectList" onchange="OnChangeAppUserID()">
+                                <option value="" selected disabled hidden>@Localizer["Choose a User"]</option>
+                            </select>
+                            <div class="input-group-append">
+                                <input class="btn btn-primary" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AppUserID'))" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="AppRoleID" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <div class="input-group align-self-center">
+                            @if(Model.AppUserID == null)
+                            {
+                                <select asp-for="AppRoleID" class="form-control" asp-items="@Model.RoleNamesSelectList" disabled="disabled">
+                                    <option value="" selected disabled hidden>@Localizer["Choose a Role"]</option>
+                                </select>
+                                <div class="input-group-append">
+                                    <input class="btn btn-primary" id="AppRoleIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AppRoleID'))" disabled="disabled" />
+                                </div>
+                            }
+                            else
+                            {
+                                <select asp-for="AppRoleID" class="form-control" asp-items="@Model.RoleNamesSelectList">
+                                    <option value="" selected disabled hidden>@Localizer["Choose a Role"]</option>
+                                </select>
+                                <div class="input-group-append">
+                                    <input class="btn btn-primary" id="AppRoleIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AppRoleID'))" />
+                                </div>
+                            }
+                        </div>
+                    </div>
+                </div>
+            }
             <div class="form-group row">
                 <div class="col-sm-12">
                     <button type="submit" class="btn btn-primary" style="width:auto">@Localizer["Save"]</button>
@@ -205,5 +247,6 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/ActionBtn.js"></script>
-    <script src="~/js/ResetSelect.js"></script>
+    <script src="~/js/OnClickClear.js"></script>
+    <script type="module" src="~/js/CompanyContacts/OnChangeAppUserID.js"></script>
 }
