--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Index.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Index.cshtml
@@ -78,6 +78,20 @@
                     }
                 </a>
             </th>
+            <th>
+                <a asp-controller="@typeof(CompanyContactsController).GetNameOfController()" asp-action="@nameof(CompanyContactsController.Index)"
+                   asp-route-sortOrder="@ViewData["RoleName"]" asp-route-currentFilter="@ViewData["CurrentFilter"]">
+                    @Html.DisplayNameFor(p => p.FirstOrDefault().RoleName)
+                    @if (Convert.ToString(ViewData["CurrentSort"]) == "RoleName_desc")
+                    {
+                        @Html.Raw(" ▲")
+                    }
+                    @if (Convert.ToString(ViewData["CurrentSort"]) == "RoleName_asc")
+                    {
+                        @Html.Raw(" ▼")
+                    }
+                </a>
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -93,6 +107,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(vm => contact.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(vm => contact.RoleName)
                 </td>
                 <td>
                     @if (userCanReadCompanyContacts)
