--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Details.cshtml
@@ -133,7 +133,7 @@
 <div>
     @if(userCanUpdateCertificates && Model.Certifications.Count() != 0){
         <a asp-controller="@typeof(ExaminationsController).GetNameOfController()" asp-action="@nameof(ExaminationsController.Update)" 
-            asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary">@Localizer["Update"]</a>
+            asp-route-id="@Model.EncryptedID" asp-route-returnUrl="@currentUrl" class="btn btn-primary">@Localizer["Grade"]</a>
     }
     <a class="btn btn-primary" style="width:auto" href="@returnUrl">
         @Localizer["Back"]
