--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
@@ -1,12 +1,21 @@
 ﻿@using System.Text.Json
 @using WeldingPassportsApp.Stores;
 @using Microsoft.AspNetCore.Mvc;
+@inject RoleManager<AppRole> _roleManager;
+@inject UserManager<AppUser> _userManager;
 @model CompanyContactEditViewModel
 
 @{
     ViewData["Title"] = @Localizer["Edit Contact"];
     string returnUrl = ViewBag.ReturnUrl;
     string currentUrl = ViewBag.CurrentUrl;
+
+    AppRole appRole = new AppRole();
+    if(Model.AppRoleID != null)
+    {
+        appRole = await _roleManager.FindByIdAsync(Model.AppRoleID);
+    }
+    var adminUsers = await _userManager.GetUsersInRoleAsync(RolesStore.Admin);
 
     //Todo: deserialize TempData
     //if(TempData.ContainsKey(nameof(CompanyContactEditViewModel)))
@@ -56,7 +65,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-controller="@typeof(CompanyContactsController).GetNameOfController()" asp-action="@nameof(CompanyContactsController.Edit)" asp-route-returnUrl="@returnUrl" asp-route-currentUrl="@currentUrl" method="post">
+        <form asp-controller="@typeof(CompanyContactsController).GetNameOfController()" asp-action="@nameof(CompanyContactsController.Edit)" asp-route-returnUrl="@returnUrl" asp-route-currentUrl="@currentUrl" method="post" onsubmit="PrepareFormOnsubmit()">
             <input asp-for="EncryptedID" title="EncryptedID" placeholder="EncryptedID" hidden />
             <div class="form-group row">
                 <label asp-for="ContactID" class="col-sm-2 col-form-label"></label>
@@ -198,12 +207,24 @@
                     <label asp-for="AppUserID" class="col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
                         <div class="input-group align-self-center">
-                            <select asp-for="AppUserID" class="form-control" asp-items="@Model.AppUsersSelectList" onchange="OnChangeAppUserID()">
-                                <option value="" selected disabled hidden>@Localizer["Choose a User"]</option>
-                            </select>
-                            <div class="input-group-append">
-                                <input class="btn btn-primary" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AppUserID'))" />
-                            </div>
+                            @if(Model.AppRoleID == null)
+                            {
+                                <select asp-for="AppUserID" class="form-control" asp-items="@Model.AppUsersSelectList" onchange="OnChangeAppUserID()">
+                                    <option value="" selected disabled hidden>@Localizer["Choose a User"]</option>
+                                </select>
+                                <div class="input-group-append">
+                                    <input class="btn btn-primary" id="AppUserIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AppUserID'))" />
+                                </div>
+                            }
+                            else
+                            {
+                                <select asp-for="AppUserID" class="form-control" asp-items="@Model.AppUsersSelectList" disabled="disabled" onchange="OnChangeAppUserID()">
+                                    <option value="" selected disabled hidden>@Localizer["Choose a User"]</option>
+                                </select>
+                                <div class="input-group-append">
+                                    <input class="btn btn-primary" id="AppUserIDClearButton" type="button" value="@Localizer["Clear"]" onclick="OnClickClear($('#AppUserID'))" disabled="disabled" />
+                                </div>
+                            }
                         </div>
                     </div>
                 </div>
@@ -211,9 +232,9 @@
                     <label asp-for="AppRoleID" class="col-sm-2 col-form-label"></label>
                     <div class="col-sm-10">
                         <div class="input-group align-self-center">
-                            @if(Model.AppUserID == null)
+                            @if (Model.AppUserID == null || (appRole.Name == RolesStore.Admin && adminUsers.Count() < 2))
                             {
-                                <select asp-for="AppRoleID" class="form-control" asp-items="@Model.RoleNamesSelectList" disabled="disabled">
+                                <select asp-for="AppRoleID" class="form-control" asp-items="@Model.RoleNamesSelectList" disabled="disabled" onchange="OnChangeAppRoleID()">
                                     <option value="" selected disabled hidden>@Localizer["Choose a Role"]</option>
                                 </select>
                                 <div class="input-group-append">
@@ -222,7 +243,7 @@
                             }
                             else
                             {
-                                <select asp-for="AppRoleID" class="form-control" asp-items="@Model.RoleNamesSelectList">
+                                <select asp-for="AppRoleID" class="form-control" asp-items="@Model.RoleNamesSelectList" onchange="OnChangeAppRoleID()">
                                     <option value="" selected disabled hidden>@Localizer["Choose a Role"]</option>
                                 </select>
                                 <div class="input-group-append">
@@ -248,5 +269,7 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/ActionBtn.js"></script>
     <script src="~/js/OnClickClear.js"></script>
+    <script src="~/js/CompanyContacts/PrepareFormOnsubmit.js"></script>
     <script type="module" src="~/js/CompanyContacts/OnChangeAppUserID.js"></script>
+    <script type="module" src="~/js/CompanyContacts/OnChangeAppRoleID.js"></script>
 }
